version 0.7.0 - XX-Feb-2009
 . Atlas: Fixed black line (issue #135 and issue #47)
 . Atlas: Works when GL_CULL_FACE is enabled (issue #179)
 . Atlas: updateAltasValues renamed to updateAtlasValues (issue #198)
 . CocosLive: added client and example that uses the CocosLive service (issue #175)
 . CocosNode: children is a property (issue #185)
 . Demos: Creating Window and attaching cocos2d to it (issue #180)
 . Demos: Texture2dDemo shows how to load PVR images (issue #112)
 . Director: OpenGLview is attached to a given UIView/UIWindow (issue #180)
 . Director: winSize returns a CGSize (not a CGRect) (issue #159)
 . Director: added FastDirector (issue #145)
 . Director: dispatch missing events in main loop (issue #146)
 . Director: renamed runScene with runWithScene (issue #194)
 . Director: SignificantTimeChange fixed (issue #6)
 . Effects: Added Effects support (Grid and TiledGrid) (issue #183)
 . Effects: Basic: StopGrid, ReuseGrid,
 . Effects: Grid: Waves3D, FlipX3D, FlipY3D, Lens3D, Ripple3D, Liquid, Shaky3D, Waves, Twirl
 . Effects:	Tiled: ShakyTiles3D, ShatteredTiles3D, ShuffleTiles, FadeOutTRTiles, FadeOutBLTiles,
				FadeOutUpTiles, FadeOutDownTiles, TurnOffTiles, WavesTiles3D, JumpTiles3D,
				SplitRows, SplitCols
 . Experimental: Added StreakDemo (issue #171)
 . Menu: aligItemsVerticallyOld removed. (issue #196)
 . MenuItemFont: assign correct size and documented isEnabled (issue #132)
 . Particle: Buffers updated on update (issue #163)
 . Sprite: initWithPVRTCFile is deprecated. will be removed in v0.8 (issue #197)
 . Texture: Support for full PVRTC (issue #112)
 . Texture: Easier to set Alias and/or AntiAlias texture parameters (issue #135 and issue #47)
 . TileMapAtlas: it is readable / writeable now (issue #200)
 . Transitions: added new Effects transitions
	 SplitRowsTransition, SplitColsTransition, TurnOffTilesTransition,
	 FadeTRTransition, FadeBLTransition, FadeUpTransition, FadeDownTransition
     (issue #187)